cmake_minimum_required(VERSION 3.10.0)
project(xiaolei)
set(CMAKE_CXX_STANDARD 14)
# find_package(Boost REQUIRED COMPONENTS regex)
# include_directories(${Boost_INCLUDE_DIRS})
# link_libraries(${Boost_LIBRARIES})
add_executable(xiaolei /home/xiaolei/leetcode/newLeetcode/leetCode/动态规划/背包问题.cpp)
add_definitions(-O0)